Add SocialSide component with social media links and email contact
- Created a new SocialSide.vue component to display social media icons (GitHub, Instagram, YouTube, LinkedIn) and an email link.
- Implemented responsive design with vertical layout for the email and social icons.
- Added hover effects for icons and email link for better user interaction.
- Included a vertical separator for visual separation of social icons and email.
- Styled the component with scoped CSS for better encapsulation.

--- a/2.0/my-portfolio/public/index.html
+++ b/2.0/my-portfolio/public/index.html
@@ -4,7 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
+<link href="https://unpkg.com/@fluentui/web-components@latest/dist/fluent-system-icons.css" rel="stylesheet">
+<!-- Font Awesome CDN -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  integrity="sha512-yUoYasj8hP+5kXlaRHYVzYMXkYrsMXYc8cGRLqQ58PXK2sxgX8kRG2XPJvKzFdxJ6gPh+arMxw0Y+0kGg4yXMg=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/>
+
     <title>Portifólio Camilly</title>
   </head>
   <body>
